--- a/styles.css
+++ b/styles.css
@@ -756,7 +756,7 @@
   max-height: 0;
   overflow: hidden;
   transition: max-height 0.3s ease, padding 0.3s ease;
-  /*padding: 0 40px;*/
+  padding: 10px 20px;
   /*margin-left: 20px;*/
   background-color: #ffffff;
   /*border: 1px solid transparent;*/
@@ -768,6 +768,7 @@
   font-size: 1em;
   text-align: left;
   line-height: 1.5;
+  margin-top: 0;
   margin-bottom: 0;
   /*padding: 0 10px;*/
   /*padding-bottom: 0;*/
@@ -782,9 +783,9 @@
 
 .contributions_list {
   text-align: left;
-  padding-top: 0;
+  /*padding-top: 0;*/
   margin-top: 0;
-  margin-bottom:0;
+  /*margin-bottom:0;*/
   list-style-position: inside; /* Makes bullets align inside the content box */
 }
 
@@ -804,7 +805,7 @@
   height: auto;
   overflow: visible;
   /*border: 1px solid black;*/ /* uncomment to see padding and margin effects */
-  margin-bottom: 200px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
+  margin-bottom: 196px; /* content box gap from down header upper edge; if top padding 15px & margin-bottom 50px, 50px precedes */
 }
 
 .accordion-item.active .accordion_content_description {
@@ -821,7 +822,7 @@
 
 .accordion-item.active .contributions_list {
   text-align: left;
-  padding-top: 0;
+  /*padding-top: 0;*/
   margin-top: 0;
   list-style-position: inside; /* Makes bullets align inside the content box */
 }
