--- a/styles.css
+++ b/styles.css
@@ -751,6 +751,7 @@
   font-size: 1em;
   /*font-weight: bold;*/
   background-color: #e9e9e9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -759,6 +760,7 @@
 
 .accordion-header:hover {
   background-color: #e9e9e9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   color: black; /* font color */
   font-family: 'Helvetica';
   font-size: 1em;
