--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@
 .header_text h1 {
     text-align: center;
     font-size: 4em;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     /*font-weight: 500;*/
     /*margin-top: 10px;*/
 }
@@ -505,7 +505,7 @@
 .header_text h1 {
     text-align: center;
     font-size: 4em;
-    font-family: 'Lato-Regular';
+    font-family: 'Poppins-Regular';
     /*font-weight: 500;
     margin-bottom: 10px;*/
 }
@@ -751,7 +751,7 @@
   font-size: 1em;
   /*font-weight: bold;*/
   background-color: #e9e9e9;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
   display: flex;
   justify-content: space-between;
   align-items: center;
