--- a/styles.css
+++ b/styles.css
@@ -571,7 +571,7 @@
     color: #333;
     /*padding: 0;*/
     margin-top: 15px;
-    margin-bottom: 25px;
+    margin-bottom: 23px;
     line-height: 0.2;
 }
 
@@ -760,7 +760,7 @@
 
 .accordion-header:hover {
   background-color: #e9e9e9;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  /*box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);*/
   color: black; /* font color */
   font-family: 'Helvetica';
   font-size: 1em;
