--- a/styles.css
+++ b/styles.css
@@ -174,7 +174,8 @@
 }
 
 .gradient_text_2 {
-    background: linear-gradient(to right, blue, purple, pink, red, orange);
+    /*background: linear-gradient(to right, blue, purple, pink, red, orange);*/
+    color: rgb(200, 200, 270);
     /*background: linear-gradient(to right, #0a74da, #89cff0, #b3d9ff);*/
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -201,7 +202,7 @@
 }
 
 .about_me h1 {
-    font-size: 4em;
+    font-size: 2.5em;
     text-align: center;
     font-family: 'Poppins-Regular';
     color: white;
