--- a/styles.css
+++ b/styles.css
@@ -175,10 +175,9 @@
 
 .gradient_text_2 {
     /*background: linear-gradient(to right, blue, purple, pink, red, orange);*/
-    color: rgb(200, 200, 270);
-    /*background: linear-gradient(to right, #0a74da, #89cff0, #b3d9ff);*/
+    /*color: rgb(200, 200, 270);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+    -webkit-text-fill-color: transparent;*/
 }
 
 .about_me {
@@ -205,7 +204,8 @@
     font-size: 2.5em;
     text-align: center;
     font-family: 'Poppins-Regular';
-    color: white;
+    /*color: white;*/
+    color: rgb(200, 200, 270);
     /*padding: 0;*/
     /*margin-top: 20px;*/
     line-height: 1.5;
@@ -217,7 +217,7 @@
     font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
     /*padding: 0;*/
-    /*margin-top: 5px;*/
+    margin-top: 5px;
     /*margin-bottom: 10px;*/
     line-height: 0.2;
 }
