--- a/styles.css
+++ b/styles.css
@@ -172,14 +172,14 @@
 .main_page section {
     flex: 1;
 }
-
+/*
 .gradient_text_2 {
-    /*background: linear-gradient(to right, blue, purple, pink, red, orange);*/
-    /*color: rgb(200, 200, 270);
+    background: linear-gradient(to right, blue, purple, pink, red, orange);
+    color: rgb(200, 200, 270);
     -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;*/
+    -webkit-text-fill-color: transparent;
 }
-
+*/
 .about_me {
     /*display: flex;*/
     /*background-color: white;*/
@@ -205,7 +205,7 @@
     text-align: center;
     font-family: 'Poppins-Regular';
     /*color: white;*/
-    color: rgb(211, 211, 280);
+    color: rgb(200, 200, 270);
     /*padding: 0;*/
     /*margin-top: 20px;*/
     line-height: 1.5;
