--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@
     text-align: center;
     font-family: 'Poppins-Regular';
     /*color: white;*/
-    color: rgb(200, 200, 270);
+    color: rgb(211, 211, 280);
     /*padding: 0;*/
     /*margin-top: 20px;*/
     line-height: 1.5;
@@ -215,9 +215,10 @@
     font-size: 2.5em;
     text-align: center;
     font-family: 'Poppins-Regular';
-    color: rgb(211, 211, 280);
+    /*color: rgb(211, 211, 280);*/
+    color: #e9e9e9;
     /*padding: 0;*/
-    margin-top: 5px;
+    margin-top: 8px;
     /*margin-bottom: 10px;*/
     line-height: 0.2;
 }
