--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@
     text-align: center;
     font-family: 'Poppins-Regular';
     /*color: rgb(211, 211, 280);*/
-    color: #e9e9e9;
+    color: rgb(170, 170, 170);
     /*padding: 0;*/
     margin-top: 8px;
     /*margin-bottom: 10px;*/
