--- a/styles.css
+++ b/styles.css
@@ -213,7 +213,7 @@
 
 .about_me h2 {
     /*font-size: 2.5em;*/
-    font-size: 2.1em;
+    font-size: 2.05em;
     text-align: center;
     font-family: 'Poppins-Regular';
     color: rgb(211, 211, 280);
@@ -282,7 +282,7 @@
 
 .profile ul {
     list-style-type: none;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 }
 
 .profile ul li {
@@ -312,7 +312,7 @@
 
 .projects ul {
     list-style-type: none;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 }
 
 .projects ul li {
@@ -342,7 +342,7 @@
 
 .github ul {
     list-style-type: none;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 }
 
 .github ul li {
@@ -374,7 +374,7 @@
 .blog ul {
     list-style-type: none;
     /*line-height: 1.2;*/
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 }
 
 .blog ul li {
@@ -406,7 +406,7 @@
 
 .linkedin ul {
     list-style-type: none;
-    margin-bottom: 20px;
+    margin-bottom: 19px;
 }
 
 .linkedin ul li {
@@ -499,7 +499,7 @@
 
 .gradient_text_2 {
     /*background: linear-gradient(to right, blue, purple, pink, red, orange);*/
-    background: linear-gradient(to right, purple, light blue);
+    background: linear-gradient(to right, #A020F0, #ADD8E6);
     /*background: linear-gradient(to right, #0a74da, #89cff0, #b3d9ff);*/
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
