--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,8 @@
 
 .gradient_text_1 {
     /*background: linear-gradient(to right, #4facfe, #a150e9, #fa71cd, #ffa726, #ffeb3b);*/
-    background: linear-gradient(to right, #4facfe, #a150e9, #fa71cd, #ff4500);
+    /*background: linear-gradient(to right, #4facfe, #a150e9, #fa71cd, #ff4500);*/
+    background: linear-gradient(to right, #4facfe, #a150e9, #fa71cd, #4facfe);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
