--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,7 @@
     font-size: 4em;
     font-family: 'Poppins-Regular';
     /*font-weight: 500;*/
-    margin-top: 10px;
+    margin-top: 0;
 }
 
 .header_text p {
