--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@
     font-family: 'Poppins-Regular';
     /*font-weight: 500;*/
     /*margin-top: 0;*/ /* doesn't affect spacing */
-    margin-bottom: 5px;
+    margin-bottom: 0;
 }
 
 .header_text p {
@@ -153,7 +153,7 @@
     /*font-style: italic;*/
     font-size: 1.3em;
     /*padding: 20px;*/
-    margin-bottom: 50px;
+    margin-bottom: 40px;
 }
 
 .main_page main {
